--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,11 +12,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <fragment
-            android:id="@+id/choose_area_fragment"
-            android:name="com.example.android.myweather.ChooseAreaFragment"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+        <!--<fragment-->
+            <!--android:id="@+id/choose_area_fragment"-->
+            <!--android:name="com.example.android.myweather.ChooseAreaFragment"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="match_parent" />-->
 
     </FrameLayout>
 
