初步完成省份的添加和删除功能（添加功能不完善，待修改）

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
 
         <!--<fragment-->
             <!--android:id="@+id/choose_area_fragment"-->
-            <!--android:name="com.example.android.myweather.ChooseAreaFragment"-->
+            <!--android:name="com.example.android.myweather.ChooseProvinceFragmentment"-->
             <!--android:layout_width="match_parent"-->
             <!--android:layout_height="match_parent" />-->
 
