--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,5 @@
     <color name="colorAccent">#D81B60</color>
     <color name="aqi_green">#00FF00</color>
     <color name="aqi_orange">#FFB90F</color>
-    <color name="bubble_color"></color>
+    <color name="bubble_color">#80FFFFFF</color>
 </resources>
