完成截图分享功能，同时尝试在刷新时引入高斯模糊提升界面美观

--- a/app/src/main/res/layout/forecast_seven_item.xml
+++ b/app/src/main/res/layout/forecast_seven_item.xml
@@ -50,6 +50,7 @@
     </LinearLayout>
 
     <TextView
+        android:layout_marginLeft="8dp"
         android:textColor="@android:color/white"
         android:id="@+id/min_text"
         android:layout_width="0dp"
