--- a/app/src/main/res/layout/forecast.xml
+++ b/app/src/main/res/layout/forecast.xml
@@ -22,24 +22,28 @@
         <TextView
             android:layout_marginRight="8dp"
             android:id="@+id/seven_days_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="64dp"
+            android:layout_height="24dp"
             android:layout_alignParentRight="true"
+            android:gravity="center"
             android:layout_marginTop="20dp"
             android:text="@string/seven_days"
-            android:textColor="@android:color/white"
+            android:textColor="@drawable/btn_text_selector"
+            android:background="@drawable/btn_bg_selector"
             android:textSize="16sp" />
 
         <TextView
             android:layout_marginRight="8dp"
             android:id="@+id/three_days_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="64dp"
+            android:layout_height="24dp"
             android:layout_marginTop="20dp"
             android:layout_toLeftOf="@+id/seven_days_btn"
             android:text="@string/three_days"
+            android:gravity="center"
             android:textSize="16sp"
-            android:textColor="@android:color/white"/>
+            android:textColor="@drawable/btn_text_selector"
+            android:background="@drawable/btn_bg_selector"/>
 
     </RelativeLayout>
 
