--- a/app/src/main/res/layout/cities_item.xml
+++ b/app/src/main/res/layout/cities_item.xml
@@ -9,6 +9,6 @@
     android:padding="16dp"
     android:textSize="16sp"
     android:text="武汉"
-    android:textColor="@android:color/black">
+    android:textColor="@android:color/white">
 
 </TextView>
