--- a/app/src/main/res/layout/provinces_item.xml
+++ b/app/src/main/res/layout/provinces_item.xml
@@ -7,6 +7,6 @@
     android:background="@drawable/item_list_background"
     android:gravity="center"
     android:padding="8dp"
-    android:textColor="#000000">
+    android:textColor="#ffffff">
 
 </TextView>
