--- a/app/src/main/res/layout/provinces_list.xml
+++ b/app/src/main/res/layout/provinces_list.xml
@@ -9,10 +9,13 @@
         android:id="@+id/key_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#dedede"
-        android:padding="10dp"
-        android:layout_marginLeft="3dp"
+        android:background="@drawable/rounded_rectangle"
+        android:padding="12dp"
+        android:layout_marginLeft="4dp"
+        android:layout_marginRight="4dp"
         android:layout_marginTop="8dp"
+        android:textColor="@android:color/white"
+        android:text="A"
         android:textSize="14sp" />
 
     <android.support.v7.widget.RecyclerView
